# sauce_demo_UI_autotests

./: .gitignore  README.md  pyproject.toml
allure-results/: 01151221-bdd5-4ec1-91bb-3a2e9e02e165-container.json  021ed700-0a44-4dbc-be23-e83c7ed6348d-container.json  0399ffba-50ed-49d3-a48d-4b1926c13033-container.json  051536df-b9c5-4ad8-8f4e-7892815a8532-attachment.html  059e8cb4-0688-4351-af9e-4a121e93ea6f-container.json  085abdeb-5f47-4ad0-b50d-851e027b33ee-attachment.txt  0a52ce24-2e72-4e82-9b27-d54e0040b3ef-container.json  0a704264-8c03-4f74-a69b-6f38a94d3050-container.json  0a89b515-18fa-4f4a-b8f1-d7cb62a040fa-container.json  0b69df08-da49-458f-b951-b1253759eee0-container.json  0b708c39-fdc5-489e-b99f-01e569a55765-attachment.txt  0cd7cd3b-258e-4e10-aaf6-9a64230fd33a-result.json  0cd869e1-6271-43c4-8c10-1101ace01f01-result.json  0da40888-3152-4636-833e-fc47e9a3d8bd-container.json  0fd39bda-6f08-4f4e-bc67-4bad12424a13-container.json  129bdf77-4baa-467b-b2e9-c1d74849ca12-attachment.html  16621c28-da0f-4ceb-9af1-6cf27a1196dd-attachment.html  199ed7d7-e84b-48fb-84f7-991568be3b3e-container.json  1a870f17-2966-4d21-a80d-b07324414e10-container.json  1bc6e38b-cf69-4476-b35d-e12f4746b18f-result.json  1c8dfcc8-4d9e-4e31-91bb-359b70958821-result.json  1d4ca1cb-ff22-4b6b-abb5-4362f444e6c8-result.json  1e2f70c2-84a5-4023-b9fb-07ca40dcd256-attachment.html  1fa1ddb3-2d66-4137-a737-124bb6c056cd-result.json  2377990a-0e49-4a14-8625-c11244ddfb68-container.json  281d0819-4eda-4bdc-83c8-2cb8e5b6cf61-result.json  28205c2e-26aa-4955-a0a8-ed93b981271e-result.json  (+168 more)
tests/: conftest.py  (+3 more)
(+216 files in other folders)
